# klldFN.v2

./: .replit  config.js  fortnite.py  main.sh  pyproject.toml  requirements.txt
src/: fortnite.py  pyproject.toml
