[tool.poetry]
name = "klldFN.v2"
version = "0.0.1"
description = ""
authors = ["klld <kll.d.repl.co@hotmail.com
>"]

[tool.poetry.dependencies]
python = "^3.8"
fortnitepy = "^v3.6.4"
crayons = "^0.4.0"
termcolor = "^1.1.0"
aioconsole = "^0.3.1"
flask = "^1.1.2"
uvloop = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
